Fixing-> HTML code not showing

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -7,15 +7,14 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color:antiquewhite;
-    color: red;
 }
 
 /* Navbar styles */
 .navbar {
     background-color: #3498db;
-    color: red;
+    color: #fff;
     padding: 10px 0;
+
 }
 
 .container {
@@ -28,6 +27,7 @@ body {
     text-decoration: none;
     font-size: 24px;
     color: #fff;
+    padding-right: 5px;
 }
 
 .nav-links {
@@ -36,6 +36,7 @@ body {
 
 .nav-links li {
     display: inline;
+    padding: 2px;
     margin-right: 20px;
 }
 
@@ -46,7 +47,7 @@ body {
 }
 
 /* Responsive styles */
-@media (max-width: 768px) {
+/* @media (max-width: 668px) {
     .container {
         flex-direction: column;
         align-items: flex-start;
@@ -58,6 +59,6 @@ body {
 
     .nav-links li {
         display: block;
-        margin: 10px 0;
+        margin: 2px 0;
     }
-}
+} */
