--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -7,12 +7,11 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(228, 212, 212);
+    background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    color: black;
 }
 
 .card {
